removed social container when screen hits 1150px to avoid ovverlapping and added some padding to the about me section on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -552,6 +552,8 @@ textarea {
   }
   .about-me {
     padding-top: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
   }
   .about-body img {
     width: 80%;
@@ -563,6 +565,11 @@ textarea {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+@media (max-width: 1150px) {
+  .social-container {
+    display: none;
   }
 }
 @media (max-width: 560px) {
